# crustace

./: README.md
add/adder/: Cargo.toml
adder/src/: lib.rs
battle/: Cargo.toml
battle/src/: main.rs
blog/src/: lib.rs  main.rs
blog_typed/: Cargo.toml  lib.rs
blog_typed/src/: main.rs
chapter_10/src/: main.rs
closures/: adder
closures/src/: main.rs
coding-dojo/fizzbuzz/: rules
coding-dojo/game-of-life/: rules.txt
collections/: Cargo.toml
collections/src/: employee.rs  main.rs  test.rs
cons/src/: main.rs
error_handling/src/: main.rs
foo/src/: main.rs
guessing_game/src/: main.rs
gui/src/: lib.rs  main.rs
hello-async/: Cargo.toml
hello-async/src/: main.rs
hello_cargo/src/: main.rs
iterator/src/: main.rs
messenger/src/: main.rs
minigrep/src/: lib.rs  main.rs
pattern_matching/: Cargo.toml
pattern_matching/src/: main.rs
pong/: .gitattributes  Cargo.toml  Readme.md  TODO.md
pong/art/: Playground.xcf  pong.blend  pong.blend1
pong/assets/: registry.json
pong/assets/blueprints/: Paddle.glb  Playground.glb  Puck.glb
pong/assets/levels/: World.glb  World.meta.ron
pong/assets/materials/: Material.001.glb  MaterialLeft.glb  MaterialRight.glb  PlaygroundMaterial.glb  Puck.glb
pong/assets/textures/: diffuse_map.ktx2  skybox.ktx2  specular_map.ktx2
pong/src/: lib.rs  main.rs  plugin.rs
pong/src/plugin/: ball.rs  kickoff.rs  paddle.rs  playground.rs  puck.rs  score.rs  shake.rs  state.rs
rectangles/src/: main.rs
restaurant/src/: lib.rs
stream/src/: main.rs
strings/: Cargo.toml
template/: Cargo.toml
unsafe_playground/: Cargo.toml
(+14 files in other folders)
