[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.1.1"
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.1"
noise = "0.9.0"
rand = { version = "0.9.0-alpha.1", features = [] }
