[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.28.0"
bevy_map_camera = "0.2.0"
leafwing-input-manager = "0.16.0"
noise = "0.9.0"
rand = "0.8.5"
